--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -3,7 +3,7 @@
     <header class="bs-header text-center" id="overview">
         <div class="container">
             <h1>
-                ConceptVector
+                EssayIQ
             </h1>
 
             <p>Sculpt Human Understandable Vectoral Representation of Words
@@ -35,9 +35,9 @@
                     <div class="page-header">
                         <h1>Overview</h1>
                     </div>
-                    <h3>What is ConceptVector?</h3>
+                    <h3>What is EssayIQ?</h3>
                     <p>
-                        The goal of <strong>ConceptVector</strong> is to build human understandable vector representation of words.
+                        The goal of <strong>EssayIQ</strong> is to help course instructor find themes easily in the essay assignments submitted by students.
                     </p>
                     <img src="images/conceptvector.png" alt="I'm Yeoman" width="600"><br>
 
