--- a/client/app/views/customassignment.html
+++ b/client/app/views/customassignment.html
@@ -1,6 +1,6 @@
 <div class="container">
   <uib-alert type="danger" ng-hide="isOwner()">You are viewing this assignment as a guest. Please login and copy this assignment to create a clone and edit.</uib-alert>
-  <uib-alert type="danger" ng-show="fileError">Duplicate name! The assignment name is taken. Please use other assignment name. </uib-alert>
+  <uib-alert type="danger" ng-show="fileError">Error in assignment creation. Remove non-allowed symbols and characters </uib-alert>
   <uib-alert type="success" ng-show="fileSuccess">Assignment is saved successfully </uib-alert>
   <div class="row">
     <div class="col-md-12">
