--- a/client/app/views/themeadd.html
+++ b/client/app/views/themeadd.html
@@ -19,13 +19,16 @@
         <option value="#ffff00">Yellow</option>
         <option value="#7CFC00">Green</option>
         <option value="#00FFFF">Cyan</option>
-        <option value="##0000FF">Blue</option>
+	<option value="#0000FF">Blue</option>
+        <option value="#80c3d8">Light Blue</option>
         <option value="#A9A9A9">Grey</option>
         <option value="#8A2BE2">Blue Violet</option>
         <option value="#9B30FF"> Purple</option>
+	<option value="#ff69b4">Pink</option>
       </select>
-      <h3> Theme sentences </h3>
-      <textarea cols="50" rows="15" ng-model="theme_sentences" placeholder="Add theme sentences here separated by dots ('.')"/>
+      <h3> 10% Annotated Theme sentences from this user:</h3>
+      <!--{{theme_sentences}} -->
+      <!--<textarea cols="50" rows="15" ng-model="theme_sentences" placeholder="Add theme sentences here separated by dots ('.')"/> -->
 
     </div>
   </div>
