--- a/client/app/views/themelist.html
+++ b/client/app/views/themelist.html
@@ -46,7 +46,7 @@
                                        <dt>Assignment title</dt>
                                         <dd> {{theme.title}}</dd>
                                          <dt> Theme name</dt>
-                                        <dd> {{theme.themeName}}</dd>
+                                         <dd style="background-color: {{theme.color}};"> {{theme.themeName}}</dd>
                                          <dt> Theme sentences</dt>
                                         <dd> {{theme.themeSentences}}</dd>
                                     </dl>
