--- a/client/app/views/annotatewholesubmissions.html
+++ b/client/app/views/annotatewholesubmissions.html
@@ -4,12 +4,12 @@
     <div class="col-md-12">
       <a href="/#/submissions" ng-href="/#/submissions" class="btn btn-default pull-right"><i class="fa fa-reply"></i> Go Back </a>
       <!-- <a  target="_self" ng-href="{{download_url}}" class="btn btn-default pull-right"><i class="fa fa-download"></i> Download as JSON </a> -->
-
+      <h1> Essay Annotation for {{assignmentname}} </h1>
       <div class="panel panel-default">
           <div class="panel-body">
               <div ng-repeat="dataitem in data">
                    <h2>Submitted essay: ({{dataitem.submissionname}})</h2>
-                    <essayannotate annotation="annotation" sentences="dataitem.sentences" submissionname= "dataitem.submissionname" assignmentid="assignmentID" themes="dataitem.themes"> </essayannotate>
+                    <essayannotate userid="userid" username="username" annotation="annotation" sentences="dataitem.sentences" submissionid="dataitem.submissionid" submissionname= "dataitem.submissionname" assignmentid="assignmentID" themes="dataitem.themes"> </essayannotate>
                     <h4>Themes to look for:</h4>
                       <li ng-repeat="theme in themes">
                           <span  title="Theme Sentences: {{theme.themeSentences}}" style="background-color: {{theme.color}}"> {{theme.themeName}}</span>
@@ -43,6 +43,7 @@
         </div>
         <div class="modal-footer">
             <button class="btn btn-primary" ng-click="save()">Save</button>
+            <button class="btn btn-primary" ng-if="showRemove()" ng-click="remove()">Remove annotation</button>
             <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
         </div>
     </script>
